--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=Event-Ticketing-System
+
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/event_system
+spring.datasource.username=root
+spring.datasource.password=12345678
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
